feat(event_chart): integerated in web app

--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -202,8 +202,8 @@
         sentiment_summary_word_Data     = {{ sentiment_summary_word_Data  | safe }};
         entity_significance_wordcloud_Data   = {{ entity_significance_wordcloud_Data  | safe }};
         entity_significance_bar_Data    = {{ entity_significance_bar_Data  | safe }};
-        sentiment_summary_linechart_Data= {{ sentiment_summary_linechart_Data | safe}}
-        
+        sentiment_summary_linechart_Data= {{ sentiment_summary_linechart_Data | safe}};
+        event_chart_Data = {{ event_chart_Data | safe }};
         
         console.log("here1 : ",entity_significance_wordcloud_Data);
         console.log("here2 : ",sentiment_summary_linechart_Data);
